--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,34 +6,54 @@ jobs: # A basic unit of work in a run
     docker: # run the steps with Docker
       # CircleCI Python images available at: https://hub.docker.com/r/circleci/python/
       - image: circleci/python:3.6.4
-        environment: # environment variables for primary container
-          PIPENV_VENV_IN_PROJECT: true
-          DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
+      #  environment: # environment variables for primary container
+      #    PIPENV_VENV_IN_PROJECT: true
+      #    DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
       # CircleCI PostgreSQL images available at: https://hub.docker.com/r/circleci/postgres/
-      - image: circleci/postgres:9.6.2
-        environment: # environment variables for the Postgres container.
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
+      #- image: circleci/postgres:9.6.2
+      #  environment: # environment variables for the Postgres container.
+      #    POSTGRES_USER: root
+      #    POSTGRES_DB: circle_test
     steps: # steps that comprise the `build` job
       - checkout # check out source code to working directory
-      - run: sudo chown -R circleci:circleci /usr/local/bin
-      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+
+      #- run: sudo chown -R circleci:circleci /usr/local/bin
+      #- run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
+
       - restore_cache:
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+      #    key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
       - run:
+          name: install dependencies
           command: |
-            sudo pip install pipenv
-            pipenv install
+            #sudo pip install pipenv
+            #pipenv install
+            python3 -m venv venv
+            . venv/bin/activate
+            make install
+
       - save_cache: # cache Python dependencies using checksum of Pipfile as the cache-key
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          #key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          #paths:
+          #  - "venv"
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - ./venv
+
       - run:
+          name: run lint
           command: |
-            pipenv run python manage.py test
-      - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: test-results
-      - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: test-results
-          destination: tr1
+            #pipenv run python manage.py test
+            . venv/bin/activate
+            make lint
+
+      #- store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+      #    path: test-results
+      #- store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
+      #    path: test-results
+      #    destination: tr1
